<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/ThemeOverlay.Dajavu.FullscreenContainer"
    tools:context=".SearchFragment">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvLikeButtonStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"/>

            <ImageButton
                android:id="@+id/ibLike"
                android:layout_margin="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/heart"
                android:contentDescription="@string/test_throttling" />

            <Button
                android:id="@+id/btnGoToAnotherFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_to_another_fragment"
                android:layout_margin="16dp"/>

            <Button
                android:id="@+id/btnGoToPaginationScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_to_pagination_screen"
                android:layout_margin="16dp"/>

            <Button
                android:id="@+id/btnGoToTokenTestScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_to_token_test_screen"
                android:layout_margin="16dp"/>

            <com.google.android.material.search.SearchBar
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/searchbar_hint" />
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.search.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/searchbar_hint"
            app:layout_anchor="@id/appbar">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:itemCount="5"
                    tools:listitem="@layout/fragment_item_place" />

            </LinearLayout>

        </com.google.android.material.search.SearchView>

</FrameLayout>
